Fix release lint: use android.util.Base64 + String-name URLEncoder overload (minSdk 24 compatibility)